--- a/index.html
+++ b/index.html
@@ -27,12 +27,17 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles/style.css" />
+    <script
+      src="https://kit.fontawesome.com/e6d616ae3e.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Document</title>
   </head>
   <body>
     <div class="d-flex bg-warning">
       <h1>Hello world</h1>
       <p>hi</p>
+      <i class="fa-brands fa-instagram"></i>
     </div>
   </body>
 </html>
