--- a/index.html
+++ b/index.html
@@ -34,10 +34,11 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="d-flex bg-warning">
-      <h1>Hello world</h1>
-      <p>hi</p>
-      <i class="fa-brands fa-instagram"></i>
+    <div class="hero">
+      <p>Hi I am</p>
+      <h1>Andrea Mitri</h1>
+      <h2 class="mb-5">Front-end developer, based in Norway</h2>
+      <div><a href="#" class="btn btn-branding">Contact me</a></div>
     </div>
   </body>
 </html>
