--- a/work.html
+++ b/work.html
@@ -35,22 +35,40 @@
   </head>
   <body>
     <div class="content-container container">
-      <div class="row">
-        <div class="col-lg-6">
-          <div class="content">
-            <h1 class="mb-4">Hi, I am Andrea Mitri</h1>
-            <h2 class="mb-4">Frontend Developer, based in Norway</h2>
-            <p class="mb-4s">
-              For anyone who wants to start learning code, this workshop is very
-              interesting. You will be challenged with different exercises, and
-              everything is well explained, homework and deadlines are good for
-              keep focus
+      <div class="content">
+        <h1 class="mb-5">Take a look at what I've been working on!</h1>
+
+        <div class="row">
+          <div class="col-md-6 mb-4">
+            <img
+              src="images/weather.jpg"
+              class="img-fluid mb-3 rounded"
+              alt=""
+            />
+            <h3 class="text-center m-0">Weather app</h3>
+            <p class="text-center text-muted">
+              Built with HTML and CSS and Java Script
             </p>
-            <a href="" class="btn btn-branding">View all projects</a>
           </div>
-        </div>
-        <div class="col-lg-6">
-          <img src="images/mi.jpg" alt="" class="img-fluid" />
+          <div class="col-md-6 mb-4">
+            <img src="images/ai.jpg" class="img-fluid mb-3 rounded" alt="" />
+            <h3 class="text-center m-0">AI project</h3>
+            <p class="text-center text-muted">Built with HTML and CSS</p>
+          </div>
+          <div class="col-md-6 mb-4">
+            <img
+              src="images/scandi.jpg"
+              class="img-fluid mb-3 rounded"
+              alt=""
+            />
+            <h3 class="text-center m-0">Scandinavian project</h3>
+            <p class="text-center text-muted">Built with HTML and CSS</p>
+          </div>
+          <div class="col-md-6 mb-4">
+            <img src="images/bake.png" class="img-fluid mb-3 rounded" alt="" />
+            <h3 class="text-center m-0">Baking project</h3>
+            <p class="text-center text-muted">Built with HTML and CSS</p>
+          </div>
         </div>
       </div>
     </div>
