--- a/contact.html
+++ b/contact.html
@@ -39,6 +39,20 @@
         <h1 class="mb-5">Let's get in touch!</h1>
         <h3>Email</h3>
         <p><a href="mailto:ladanandrea@gmail.com">ladanandrea@gmail.com</a></p>
+
+        <h3>LinkedIn</h3>
+        <p>
+          <a href="www.linkedin.com/in/andrea-mitri-968998294" target="_blank"
+            >Andrea Mitri</a
+          >
+        </p>
+
+        <h3>GitHub</h3>
+        <p>
+          <a href="https://github.com/andreamitri" target="_blank"
+            >andreamitri</a
+          >
+        </p>
       </div>
     </div>
   </body>
