--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,9 @@
 
         <h3>LinkedIn</h3>
         <p>
-          <a href="www.linkedin.com/in/andrea-mitri-968998294" target="_blank"
+          <a
+            href="https://www.linkedin.com/in/andrea-mitri-968998294/"
+            target="_blank"
             >Andrea Mitri</a
           >
         </p>
