Updated the SEO

--- a/about.html
+++ b/about.html
@@ -31,9 +31,29 @@
       src="https://kit.fontawesome.com/e6d616ae3e.js"
       crossorigin="anonymous"
     ></script>
-    <title>Document</title>
+    <meta
+      name="description"
+      content="About the front-end developer Andrea Mitri"
+    />
+    <title>About - Andrea Mitri</title>
   </head>
   <body>
+    <div class="container">
+      <nav class="d-flex justify-content-between">
+        <a href="/" title="Homepage"
+          ><img src="images/logo.jpg" class="logo" alt="Andrea logo"
+        /></a>
+
+        <ul>
+          <li><a href="/" title="Homepage">Home</a></li>
+          <li class="active">
+            <a href="/about.html" title="About Andrea">About</a>
+          </li>
+          <li><a href="/work.html" title="Andrea's work">Work</a></li>
+          <li><a href="/contact.html" title="Contact Andrea">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
     <div class="content-container container">
       <div class="row">
         <div class="col-lg-6">
@@ -50,9 +70,49 @@
           </div>
         </div>
         <div class="col-lg-6">
-          <img src="images/mi.jpg" alt="" class="img-fluid" />
+          <img src="images/mi.jpg" alt="Andrea Mitri" class="img-fluid" />
         </div>
       </div>
+      <footer>
+        <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
+          <div>
+            <h3>Work Inquiry</h3>
+            <p class="text-muted">Let's work together</p>
+          </div>
+          <div>
+            <a
+              href="/contact.html"
+              class="btn btn-branding mt-3"
+              title="Contact Andrea"
+              >Contact me</a
+            >
+          </div>
+        </div>
+
+        <div class="d-flex justify-content-center mb-5">
+          <a
+            href="mailto:ladanandrea@gmail.com"
+            class="email-link"
+            title="Email Andrea"
+            >ladanandrea@gmail.com</a
+          >
+        </div>
+        <div class="social-links d-flex justify-content-center">
+          <a
+            href="https://www.linkedin.com/in/andrea-mitri-968998294/"
+            target="_blank"
+            title="LinkedIn Profile"
+            ><i class="fa-brands fa-linkedin"></i
+          ></a>
+
+          <a
+            href="https://github.com/andreamitri"
+            target="_blank"
+            title="GitHub Profile"
+            ><i class="fa-brands fa-github"></i
+          ></a>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
