--- a/index.html
+++ b/index.html
@@ -31,18 +31,24 @@
       src="https://kit.fontawesome.com/e6d616ae3e.js"
       crossorigin="anonymous"
     ></script>
-    <title>Document</title>
+    <meta
+      name="description"
+      content="Andrea is a front-end engineer based in Oslo,Norway"
+    />
+    <title>Front-end developer - Andrea Mitri</title>
   </head>
   <body>
     <div class="container">
       <nav class="d-flex justify-content-between">
-        <a href="/"><img src="images/logo.jpg" class="logo" alt="" /></a>
+        <a href="/" title="Homepage"
+          ><img src="images/logo.jpg" class="logo" alt="Andrea logo"
+        /></a>
 
         <ul>
-          <li class="active"><a href="/">Home</a></li>
-          <li><a href="/about.html">About</a></li>
-          <li><a href="/work.html">Work</a></li>
-          <li><a href="/contact.html">Contact</a></li>
+          <li class="active"><a href="/" title="Homepage">Home</a></li>
+          <li><a href="/about.html" title="About Andrea">About</a></li>
+          <li><a href="/work.html" title="Andrea's work">Work</a></li>
+          <li><a href="/contact.html" title="Contact Andrea">Contact</a></li>
         </ul>
       </nav>
     </div>
@@ -50,15 +56,19 @@
       <p>Hi I am</p>
       <h1>Andrea Mitri</h1>
       <h2 class="mb-5">Front-end developer, based in Norway</h2>
-      <div><a href="#" class="btn btn-branding">Contact me</a></div>
+      <div>
+        <a href="/contact.html" class="btn btn-branding" title="Contact me"
+          >Contact me</a
+        >
+      </div>
     </div>
-    <p class="text-center mb-5">
+    <p class="text-center m-5">
       Featured Project which my best projects be choice to show
     </p>
     <div class="container">
       <div class="row mb-5">
         <div class="col d-none d-lg-block">
-          <img src="images/weather.jpg" class="img-fluid" />
+          <img src="images/weather.jpg" class="img-fluid" alt="weather-app" />
         </div>
         <div class="col">
           <div class="project-description">
@@ -69,7 +79,7 @@
               they live in Bookmarksgrove right at the coast of the Semantics, a
               large language ocean. A small river named Duden flows by
             </p>
-            <a href="#" class="btn btn-branding-outline">Learn more</a>
+            <a href="/work.html" class="btn btn-branding-outline">Learn more</a>
           </div>
         </div>
       </div>
@@ -83,16 +93,20 @@
               they live in Bookmarksgrove right at the coast of the Semantics, a
               large language ocean. A small river named Duden flows by
             </p>
-            <a href="#" class="btn btn-branding-outline">Learn more</a>
+            <a href="/work.html" class="btn btn-branding-outline">Learn more</a>
           </div>
         </div>
         <div class="col d-none d-lg-block">
-          <img src="images/scandi.jpg" class="img-fluid" />
+          <img
+            src="images/scandi.jpg"
+            class="img-fluid"
+            alt="Scandinavian project"
+          />
         </div>
       </div>
       <div class="row">
         <div class="col d-none d-lg-block">
-          <img src="images/bake.png" class="img-fluid" />
+          <img src="images/bake.png" class="img-fluid" alt="Baking project" />
         </div>
         <div class="col">
           <div class="project-description">
@@ -103,23 +117,31 @@
               they live in Bookmarksgrove right at the coast of the Semantics, a
               large language ocean. A small river named Duden flows by
             </p>
-            <a href="#" class="btn btn-branding-outline">Learn more</a>
+            <a href="/work.html" class="btn btn-branding-outline">Learn more</a>
           </div>
         </div>
       </div>
       <footer>
         <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
           <div>
-            <h4>Work Inquiry</h4>
+            <h3>Work Inquiry</h3>
             <p class="text-muted">Let's work together</p>
           </div>
           <div>
-            <a href="" class="btn btn-branding mt-3">Contact me</a>
+            <a
+              href="/contact.html"
+              class="btn btn-branding mt-3"
+              title="Contact Andrea"
+              >Contact me</a
+            >
           </div>
         </div>
 
         <div class="d-flex justify-content-center mb-5">
-          <a href="mailto:ladanandrea@gmail.com" class="email-link"
+          <a
+            href="mailto:ladanandrea@gmail.com"
+            class="email-link"
+            title="Email Andrea"
             >ladanandrea@gmail.com</a
           >
         </div>
@@ -127,10 +149,14 @@
           <a
             href="https://www.linkedin.com/in/andrea-mitri-968998294/"
             target="_blank"
+            title="LinkedIn Profile"
             ><i class="fa-brands fa-linkedin"></i
           ></a>
 
-          <a href="https://github.com/andreamitri" target="_blank"
+          <a
+            href="https://github.com/andreamitri"
+            target="_blank"
+            title="GitHub Profile"
             ><i class="fa-brands fa-github"></i
           ></a>
         </div>
