--- a/work.html
+++ b/work.html
@@ -31,9 +31,31 @@
       src="https://kit.fontawesome.com/e6d616ae3e.js"
       crossorigin="anonymous"
     ></script>
-    <title>Document</title>
+    <meta
+      name="description"
+      content="Andrea Mitris project and work she has done as a front-end developer"
+    />
+    <title>Projects - Andrea Mitri</title>
   </head>
   <body>
+    <div class="container">
+      <nav class="d-flex justify-content-between">
+        <a href="/" title="Homepage"
+          ><img src="images/logo.jpg" class="logo" alt="Andrea logo"
+        /></a>
+
+        <ul>
+          <li><a href="/" title="Homepage">Home</a></li>
+          <li>
+            <a href="/about.html" title="About Andrea">About</a>
+          </li>
+          <li class="active">
+            <a href="/work.html" title="Andrea's work">Work</a>
+          </li>
+          <li><a href="/contact.html" title="Contact Andrea">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
     <div class="content-container container">
       <div class="content">
         <h1 class="mb-5">Take a look at what I've been working on!</h1>
@@ -43,7 +65,7 @@
             <img
               src="images/weather.jpg"
               class="img-fluid mb-3 rounded"
-              alt=""
+              alt="Weather app"
             />
             <h3 class="text-center m-0">Weather app</h3>
             <p class="text-center text-muted">
@@ -51,7 +73,11 @@
             </p>
           </div>
           <div class="col-md-6 mb-4">
-            <img src="images/ai.jpg" class="img-fluid mb-3 rounded" alt="" />
+            <img
+              src="images/ai.jpg"
+              class="img-fluid mb-3 rounded"
+              alt="AI project"
+            />
             <h3 class="text-center m-0">AI project</h3>
             <p class="text-center text-muted">Built with HTML and CSS</p>
           </div>
@@ -59,18 +85,62 @@
             <img
               src="images/scandi.jpg"
               class="img-fluid mb-3 rounded"
-              alt=""
+              alt=" Scandinavian design"
             />
             <h3 class="text-center m-0">Scandinavian project</h3>
             <p class="text-center text-muted">Built with HTML and CSS</p>
           </div>
           <div class="col-md-6 mb-4">
-            <img src="images/bake.png" class="img-fluid mb-3 rounded" alt="" />
+            <img
+              src="images/bake.png"
+              class="img-fluid mb-3 rounded"
+              alt=" Baking project"
+            />
             <h3 class="text-center m-0">Baking project</h3>
             <p class="text-center text-muted">Built with HTML and CSS</p>
           </div>
         </div>
       </div>
+      <footer>
+        <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
+          <div>
+            <h3>Work Inquiry</h3>
+            <p class="text-muted">Let's work together</p>
+          </div>
+          <div>
+            <a
+              href="/contact.html"
+              class="btn btn-branding mt-3"
+              title="Contact Andrea"
+              >Contact me</a
+            >
+          </div>
+        </div>
+
+        <div class="d-flex justify-content-center mb-5">
+          <a
+            href="mailto:ladanandrea@gmail.com"
+            class="email-link"
+            title="Email Andrea"
+            >ladanandrea@gmail.com</a
+          >
+        </div>
+        <div class="social-links d-flex justify-content-center">
+          <a
+            href="https://www.linkedin.com/in/andrea-mitri-968998294/"
+            target="_blank"
+            title="LinkedIn Profile"
+            ><i class="fa-brands fa-linkedin"></i
+          ></a>
+
+          <a
+            href="https://github.com/andreamitri"
+            target="_blank"
+            title="GitHub Profile"
+            ><i class="fa-brands fa-github"></i
+          ></a>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
