Changed the content

--- a/about.html
+++ b/about.html
@@ -61,10 +61,18 @@
             <h1 class="mb-4">Hi, I am Andrea Mitri</h1>
             <h2 class="mb-4">Frontend Developer, based in Norway</h2>
             <p class="mb-4s">
-              For anyone who wants to start learning code, this workshop is very
-              interesting. You will be challenged with different exercises, and
-              everything is well explained, homework and deadlines are good for
-              keep focus
+              I am a visual merchandiser originally from Croatia, currently
+              residing in Oslo, Norway, where I've honed my skills in creating
+              compelling visual displays that captivate and engage. Over time,
+              my fascination with design and technology has led me to embark on
+              a career transition into front-end development. Inspired by the
+              seamless integration of aesthetics and functionality in
+              Scandinavian design, I am eager to bring my creative insights and
+              meticulous attention to detail into the realm of web development.
+              With a strong foundation in visual storytelling and a growing
+              proficiency in HTML, CSS, and JavaScript, I am driven to craft
+              user-friendly and visually appealing websites that resonate with
+              audiences.
             </p>
             <a href="/work.html" class="btn btn-branding">View all projects</a>
           </div>
