--- a/index.html
+++ b/index.html
@@ -74,10 +74,8 @@
           <div class="project-description">
             <h2 class="mn-5">Weather app</h2>
             <p class="mb-5 text-muted">
-              Far far away, behind the word mountains, far from the countries
-              Vokalia and Consonantia, there live the blind texts. Separated
-              they live in Bookmarksgrove right at the coast of the Semantics, a
-              large language ocean. A small river named Duden flows by
+              Welcome to my Weather App, your go-to source for accurate and
+              up-to-date weather information.
             </p>
             <a href="/work.html" class="btn btn-branding-outline">Learn more</a>
           </div>
@@ -88,10 +86,13 @@
           <div class="project-description">
             <h2 class="mn-5">Scandinavian project</h2>
             <p class="mb-5 text-muted">
-              Far far away, behind the word mountains, far from the countries
-              Vokalia and Consonantia, there live the blind texts. Separated
-              they live in Bookmarksgrove right at the coast of the Semantics, a
-              large language ocean. A small river named Duden flows by
+              Welcome to Scandinavian Baby! Explore our curated collection of
+              children’s furniture, decorations, and toys inspired by
+              Scandinavian design. Our selection combines simplicity,
+              functionality, and timeless style, offering the perfect pieces to
+              create a beautiful and cozy space for your little ones. Discover
+              quality craftsmanship and elegant designs that bring the essence
+              of Scandinavia into your home.
             </p>
             <a href="/work.html" class="btn btn-branding-outline">Learn more</a>
           </div>
@@ -112,10 +113,13 @@
           <div class="project-description">
             <h2 class="mn-5">Baking project</h2>
             <p class="mb-5 text-muted">
-              Far far away, behind the word mountains, far from the countries
-              Vokalia and Consonantia, there live the blind texts. Separated
-              they live in Bookmarksgrove right at the coast of the Semantics, a
-              large language ocean. A small river named Duden flows by
+              Welcome to My Baking Hobby! This is your go-to destination for all
+              things baking, where I share my love for creating delicious treats
+              from scratch. From mouth-watering cakes and cookies to savory
+              breads and pastries, you'll find a variety of recipes, tips, and
+              tutorials to inspire your baking journey. Whether you're a
+              beginner or a seasoned pro, join me as we explore the delightful
+              world of baking and make every day a little sweeter.
             </p>
             <a href="/work.html" class="btn btn-branding-outline">Learn more</a>
           </div>
