--- a/about.html
+++ b/about.html
@@ -62,11 +62,11 @@
             <h2 class="mb-4">Frontend Developer, based in Norway</h2>
             <p class="mb-4s">
               I am a visual merchandiser originally from Croatia, currently
-              residing in Oslo, Norway, where I've honed my skills in creating
-              compelling visual displays that captivate and engage. Over time,
-              my fascination with design and technology has led me to embark on
-              a career transition into front-end development. Inspired by the
-              seamless integration of aesthetics and functionality in
+              residing in Oslo, Norway, where I've improved my skills in
+              creating compelling visual displays that captivate and engage.
+              Over time, my fascination with design and technology has led me to
+              embark on a career transition into front-end development. Inspired
+              by the seamless integration of aesthetics and functionality in
               Scandinavian design, I am eager to bring my creative insights and
               meticulous attention to detail into the realm of web development.
               With a strong foundation in visual storytelling and a growing
@@ -99,10 +99,10 @@
 
         <div class="d-flex justify-content-center mb-5">
           <a
-            href="mailto:ladanandrea@gmail.com"
+            href="mailto:andreamitri02@gmail.com"
             class="email-link"
             title="Email Andrea"
-            >ladanandrea@gmail.com</a
+            >andreamitri02@gmail.com</a
           >
         </div>
         <div class="social-links d-flex justify-content-center">
