--- a/contact.html
+++ b/contact.html
@@ -63,8 +63,8 @@
         <h1 class="mb-5">Let's get in touch!</h1>
         <h3>Email</h3>
         <p>
-          <a href="mailto:ladanandrea@gmail.com" title="Email link"
-            >ladanandrea@gmail.com</a
+          <a href="mailto:andreamitri02@gmail.com" title="Email link"
+            >andreamitri02@gmail.com</a
           >
         </p>
 
@@ -106,10 +106,10 @@
 
         <div class="d-flex justify-content-center mb-5">
           <a
-            href="mailto:ladanandrea@gmail.com"
+            href="mailto:andreamitri02@gmail.com"
             class="email-link"
             title="Email Andrea"
-            >ladanandrea@gmail.com</a
+            >andreamitri02@gmail.com</a
           >
         </div>
         <div class="social-links d-flex justify-content-center">
