--- a/index.html
+++ b/index.html
@@ -143,10 +143,10 @@
 
         <div class="d-flex justify-content-center mb-5">
           <a
-            href="mailto:ladanandrea@gmail.com"
+            href="mailto:andreamitri02@gmail.com"
             class="email-link"
             title="Email Andrea"
-            >ladanandrea@gmail.com</a
+            >andreamitri02@gmail.com</a
           >
         </div>
         <div class="social-links d-flex justify-content-center">
