--- a/contact.html
+++ b/contact.html
@@ -87,6 +87,15 @@
             >andreamitri</a
           >
         </p>
+        <h3>Resume</h3>
+        <p>
+          <a
+            href="file:///C:/Users/andrea/Downloads/Andrea%20Mitri%20-%20Resume%202024.pdf"
+            target="_blank"
+            title="Resume"
+            >Andrea Mitri</a
+          >
+        </p>
       </div>
       <footer>
         <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
