--- a/contact.html
+++ b/contact.html
@@ -90,7 +90,7 @@
         <h3>Resume</h3>
         <p>
           <a
-            href="file:///C:/Users/andrea/Downloads/Andrea%20Mitri%20-%20Resume%202024.pdf"
+            href="https://drive.google.com/file/d/1sLXPH7N6n9wjWne3BuyhP8pWDUuFqElc/view?usp=sharing"
             target="_blank"
             title="Resume"
             >Andrea Mitri</a
